[package]
name = "scroller"
version = "0.1.0"
authors = ["Brian Moore <bmoorebrian53@gmail.com>"]
edition = "2018"

[dependencies]
stdweb = "0.4.15"
stdweb-internal-macros = "0.2.5"
stdweb-internal-runtime = "0.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[profile.release]
opt-level = 0